# setup_var.efi

./: Cargo.toml  LICENSE-MIT  README.md
.cargo/: config.toml
src/: args.rs  input.rs  main.rs  utils.rs
